src/objects/Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>Date_Worked__c</fullName>
        <label>Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Listing__c</fullName>
        <label>Report Listing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <label>Reviewer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allaire Jutting</fullName>
                </value>
                <value>
                    <fullName>Amanda Campos</fullName>
                </value>
                <value>
                    <fullName>Britt Branch</fullName>
                </value>
                <value>
                    <fullName>Christina Garcia</fullName>
                </value>
                <value>
                    <fullName>Devon Asmus</fullName>
                </value>
                <value>
                    <fullName>Eileen Jutting</fullName>
                </value>
                <value>
                    <fullName>Shelagh Ghering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Hours_Worked__c</fullName>
        <label># of Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Approved__c</fullName>
        <label># of Reports Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Touched__c</fullName>
        <label># of Reports Touched</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Assurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Quality Assurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>